--- a/wp-content/themes/project/style.css
+++ b/wp-content/themes/project/style.css
@@ -2213,3 +2213,16 @@ body.single-product span.onsale {
   padding: 3px 18px;
   top: 0;
   left: 0; }
+
+#footer-text {
+	display: block;
+	margin: 3em auto 1.5em auto;
+	text-align: center;
+width: 100%;
+}
+.text-center {
+    text-align: center;
+    display: block;
+    margin: auto;
+	width: 100%;
+}
